# mapstic

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
core/: CHANGELOG.md  Cargo.toml
core/src/: lib.rs  param.rs
derive/: CHANGELOG.md  Cargo.toml
derive-impl/: CHANGELOG.md  Cargo.toml
derive-impl/src/: error.rs  helpers.rs  lib.rs  params.rs
derive-impl/src/params/: value.rs
derive-impl/src/params/snapshots/: mapstic_derive_impl__params__value__tests__int_out_of_range.snap  mapstic_derive_impl__params__value__tests__negative_int_out_of_range.snap
derive/src/: lib.rs
examples/: basic.rs  tuple.rs
src/: lib.expected.json  lib.rs
src/snapshots/: doctest_lib_rs__derive-container-mapping-flattened.snap  doctest_lib_rs__derive-container-mapping-keyword.snap  doctest_lib_rs__derive-container-param-analyzer.snap  doctest_lib_rs__derive-container-param-keyword.snap  doctest_lib_rs__derive-field-skip.snap  doctest_lib_rs__derive-generic.snap
tests/: auto.rs  explicit.rs  generics.rs  params.rs  tuple.rs
tests/helpers/: mod.rs
tests/inputs/: auto.rs  explicit.rs  generics.rs  mod.rs  params.rs  tuple.rs
tests/snapshots/: auto__auto.snap  explicit__explicit.snap  generics__extra_bound.snap  generics__extra_types.snap  generics__type_bound.snap  generics__where_bound.snap  params__over_ride.snap  params__params.snap  tuple__auto.snap
